# Wordsearch.rs

./: 2025-08-08 13-01-53.mkv  Cargo.toml  README.md  words.txt
python/: .gitignore  main.py  pyproject.toml  run.sh  test.sh
python/tests/: __init__.py
python/wordsearch/: __init__.py  app.py  container.py  event_manager.py  options_dialog.py  window.py
rust/: Cargo.toml
rust/src/: lib.rs  main.rs  pdf.rs
src/: main.rs
