[tool.poetry]
name = "wordsearch"
version = "0.1.0"
description = ""
authors = ["pianocomposer321 <tmarklebw88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.13"
python = ">=3.13,<3.14"
pyside6 = "^6.9.1"

[tool.poetry.scripts]
main = "wordsearch:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
