[tool.poetry]
name = "wordsearch"
version = "0.1.0"
description = ""
authors = ["pianocomposer321 <tmarklebw88@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
# python = "^3.13"
python = ">=3.13,<3.14"
pyside6 = "^6.9.1"
reportlab = "^4.4.3"

[tool.poetry.scripts]
main = "wordsearch:main"
test = "tests:main"

[tool.poetry-pyinstaller-plugin.scripts]
wordsearch_ui = { source = "main.py", type = "onedir", bundle = false, windowed = true }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
